--- a/HTML_CSS/film/background_film.css
+++ b/HTML_CSS/film/background_film.css
@@ -1,5 +1,8 @@
 
+
+
 header{
+	background-color: grey;
 	text-align: center;
 	font-size: 50px;
 	width: 100%;
@@ -9,6 +12,7 @@ header{
 
 
 article{
+	background-color: red;
 	margin:auto;
 	padding: 30px;
 	width: 1000px;
@@ -18,12 +22,14 @@ article{
 
 .photo{
 	float: left;
+	background-color: green;
 	margin-left: 60px;
 	width:	440px;
 	height: 600px;
 }
 
 .synopsis{
+	background-color: blue;
 	margin-left: 500px;
 	padding:10px;
 	width:	440px;
@@ -32,6 +38,7 @@ article{
 }
 
 .inf{
+	background-color: yellow;
 	margin-left: 30px;
 	padding-left: 50px;
 	width: 940px;
@@ -47,9 +54,11 @@ article{
 }
 
 footer{
+	background-color: grey;
 	text-align:center; 
 	padding-bottom: 20px;
 	padding-top: 30px;
 	width: 100%;
 	height: 100px;
 }
+
